Horizontal Scroll image fix

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -57,7 +57,6 @@ body {
   background: #0007CC;
   aspect-ratio: 1;
   border-radius: 10000px;
-  height: 400px;
   overflow: hidden;
 }
 
