--- a/sass/desktop.sass
+++ b/sass/desktop.sass
@@ -47,6 +47,8 @@ $header__height: 6rem
     font-size: main.$gap--xl
   &__text
     font-size: 1.4rem
+  &__image-wrap
+    height: 400px
 
 
 
