--- a/sass/main.sass
+++ b/sass/main.sass
@@ -68,7 +68,6 @@ body
     background: $color__principal
     aspect-ratio: 1
     border-radius: 10000px
-    height: 400px
     overflow: hidden
 
 ////ABOUT
